--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         </nav>
     </head>
-    <section class="first ">
+    <section class="container ">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -84,6 +84,183 @@
             content of a page when looking at its layout</p>
 
     </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-lg-6 mb-5">
+                <div class="d-flex flex-md-row flex-column border border-2 rounded">
+                    <img class="img-fluid" src="images/course/course-1.png" alt="" />
+                    <div>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="box-1 p-4">
+                                <h4 class="fw-bold">Fundamental of UL/UX Design</h4>
+                                <p class="text-secondary text-black-50">
+                                    Some quick example text to build on the card title and
+                                    make up the bulk of the card.
+                                </p>
+                                <h3 class="text-info fw-bold">Price : 20$</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-------------------- two ------------- -->
+            </div>
+            <div class="col-lg-6 mb-5">
+                <div class="d-flex flex-md-row flex-column border border-2 rounded">
+                    <img class="img-fluid" src="images/course/course-2.png" alt="" />
+                    <div>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="box-1 p-4">
+                                <h4 class="fw-bold">Javascript Basic to Advance</h4>
+                                <p class="text-black-50">
+                                    Some quick example text to build on the card title and
+                                    make up the bulk of the card.
+                                </p>
+                                <h3 class="text-info fw-bold">Price : 20$</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-------------------- three ------------- -->
+            </div>
+            <div class="col-lg-6 mb-5">
+                <div class="d-flex flex-md-row flex-column border border-2 rounded">
+                    <img class="img-fluid" src="images/course/course-3.png" alt="" />
+                    <div>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="box-1 p-4">
+                                <h4 class="fw-bold">Fullstack Web Development</h4>
+                                <p class="text-black-50">
+                                    Some quick example text to build on the card title and
+                                    make up the bulk of the card.
+                                </p>
+                                <h3 class="text-info fw-bold">Price : 20$</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-------------------- four ------------- -->
+            </div>
+            <div class="col-lg-6 mb-5 d-md-none d-lg-block">
+                <div class="d-flex flex-md-row flex-column border border-2 rounded">
+                    <img class="img-fluid" src="images/course/course-4.png" alt="" />
+                    <div>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="box-1 p-4">
+                                <h4 class="fw-bold">Digital Marketing</h4>
+                                <p class="text-black-50">
+                                    Some quick example text to build on the card title and
+                                    make up the bulk of the card.
+                                </p>
+                                <h3 class="text-info fw-bold">Price : 20$</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-------------------- five ------------- -->
+            </div>
+            <div class="col-lg-6 mb-5 d-md-none d-lg-block">
+                <div class="d-flex flex-md-row flex-column border border-2 rounded">
+                    <img class="img-fluid" src="images/course/course-5.png" alt="" />
+                    <div>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="box-1 p-4">
+                                <h4 class="fw-bold">Phtotgraphy Basic Rules</h4>
+                                <p class="text-black-50">
+                                    Some quick example text to build on the card title and
+                                    make up the bulk of the card.
+                                </p>
+                                <h3 class="text-info fw-bold">Price : 20$</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-------------------- two ------------- -->
+            </div>
+            <div class="col-lg-6 mb-5 d-md-none d-lg-block">
+                <div class="d-flex flex-md-row flex-column border border-2 rounded">
+                    <img class="img-fluid" src="images/course/course-6.png" alt="" />
+                    <div>
+                        <div class="d-flex justify-content-center align-items-center">
+                            <div class="box-1 p-4">
+                                <h4 class="fw-bold">Motion Graphics</h4>
+                                <p class="text-black-50">
+                                    Some quick example text to build on the card title and
+                                    make up the bulk of the card.
+                                </p>
+                                <h3 class="text-info fw-bold">Price : 20$</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-------------------- two ------------- -->
+            </div>
+        </div>
+        <div class="corse-section text-center d-md-block d-lg-block d-sm-none">
+            <a href="" class="text-decoration-none rounded bg-info text-white p-3">see More </a>
+        </div>
+    </div>
+
+
+
+    <div class="container justify-content-between bg-primary  pt-5 d-flex  text-center">
+
+        <div class="leka">
+            <h1>Ready to join?</h1>
+            <p>It is a long time learnig prosess.grow your skiil</p>
+
+        </div>
+
+        <div class="pe-5">
+            <button class="">Register now</button>
+
+
+        </div>
+
+    </div>
+
+    <div class="mt-1">
+        <h1 class="text-center">Frequently Asked Questions</h1>
+        <p class="text-center">It is a long established fact that a reader will be distracted by the readable
+            content of a page when looking at its layout</p>
+    </div>
+    <section class="container">
+        <h1 class="text-center">Trusted by over 800+ companies</h1>
+
+        <div class="al mt-5 d-flex justify-content-between">
+
+            <div>
+                <img src="images/company/company-1.png" alt="">
+
+            </div>
+            <div>
+                <img src="images/company/company-2.png" alt="">
+            </div>
+            <div>
+                <img src="images/company/company-3.png" alt="">
+            </div>
+            <div>
+                <img src="images/company/company-4.png" alt="">
+            </div>
+            <div>
+                <img src="images/company/company-5.png" alt="">
+            </div>
+            <div>
+                <img src="images/company/company-6.png" alt="">
+            </div>
+
+
+        </div>
+
+
+    </section>
+    <section class="container3">
+
+
+
+
+
+    </section>
+
 
 
 
