--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
 
 
 
-    <div class="container justify-content-between bg-primary  pt-5 d-flex  text-center">
+    <div class="container justify-content-between bg-primary  pt-5 d-flex  text-center ">
 
-        <div class="leka">
+        <div class="leka lg-4 md-6 sm-12">
             <h1>Ready to join?</h1>
             <p>It is a long time learnig prosess.grow your skiil</p>
 
@@ -253,9 +253,11 @@
 
 
     </section>
-    <section class="container3">
+    <section class=" container3 mt-5 text-center  bg-black">
 
-
+        <h1 class="text-white pt-5">Bid tech</h1>
+        <p class="text-white">Office 41, Zawaya Buildin, <br> Ghala Muscat, <br> Sultanate of Oman
+            Privacy Ploicy | br Terms of use</p>
 
 
 
