--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title> digital learnig</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css ">
     <link rel="stylesheet" href="styl.css">
+    <script src="https://kit.fontawesome.com/036fdb250b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -259,7 +260,19 @@
         <p class="text-white">Office 41, Zawaya Buildin, <br> Ghala Muscat, <br> Sultanate of Oman
             Privacy Ploicy | br Terms of use</p>
 
-
+        <div class="pa d-flex">
+            <div>
+                <i class="fa-brands fa-facebook"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div>
+                <i class="fa-brands fa-tiktok"></i>
+            </div>
 
     </section>
 
