--- a/index.html
+++ b/index.html
@@ -218,11 +218,38 @@
         </div>
 
     </div>
+    <div class="row text-center">
 
-    <div class="mt-1">
-        <h1 class="text-center">Frequently Asked Questions</h1>
-        <p class="text-center">It is a long established fact that a reader will be distracted by the readable
-            content of a page when looking at its layout</p>
+
+        <div class="col md-6">
+            <h2>Frequently Asked Questions</h2>
+            <a class="mt-5" href="">
+                <h4>what is the defferrent of css and bootstrap?</h4>
+
+            </a>
+
+
+
+
+        </div>
+    </div>
+
+
+    </div>
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
     </div>
     <section class="container">
         <h1 class="text-center">Trusted by over 800+ companies</h1>
@@ -257,10 +284,10 @@
     <section class=" container3 mt-5 text-center  bg-black">
 
         <h1 class="text-white pt-5">Bid tech</h1>
-        <p class="text-white">Office 41, Zawaya Buildin, <br> Ghala Muscat, <br> Sultanate of Oman
+        <p class="text-white mt-5">Office 41, Zawaya Buildin, <br> Ghala Muscat, <br> Sultanate of Oman
             Privacy Ploicy | br Terms of use</p>
 
-        <div class="pa d-flex">
+        <div class="pa text-white">
             <div>
                 <i class="fa-brands fa-facebook"></i>
             </div>
