--- a/index.html
+++ b/index.html
@@ -223,34 +223,60 @@
 
         <div class="col md-6">
             <h2>Frequently Asked Questions</h2>
-            <a class="mt-5" href="">
-                <h4>what is the defferrent of css and bootstrap?</h4>
-
-            </a>
-
-
-
 
         </div>
     </div>
 
-
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                    aria-expanded="true" aria-controls="collapseOne">
+                    what is the flexbox and grid different?
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <p>Grid and flexbox. The basic difference between CSS Grid Layout and CSS Flexbox Layout is that
+                        flexbox was designed for layout in one dimension - either a row or a column. Grid was designed
+                        for two-dimensional layout - rows, and columns at the same time.</p>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    what is the bootstrap and tailwind different?
+                </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile first
+                        projects on the web. On the other hand, Tailwind CSS is detailed as "A utility-first CSS
+                        framework for rapid UI development".</p>
+                </div>
+            </div>
+        </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    what is css box model?
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    In CSS, the term "box model" is used when talking about design and layout. The CSS box model is
+                    essentially a box that wraps around every HTML element.
+                </div>
+            </div>
+        </div>
     </div>
 
-
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-    </div>
     <section class="container">
         <h1 class="text-center">Trusted by over 800+ companies</h1>
 
